--- a/index.html
+++ b/index.html
@@ -128,7 +128,88 @@
         <p class="stocks__time__date">31.08.2020</p>
     </div>
     <div class="search">
-        <p class="search__text">Поиск по номеру</p>
+        <p class="search__text search__text_style">Поиск по номеру</p>
+        <p class="search__text2 search__text_style">Поиск по марке</p>
+        <p class="search__text3 search__text_style">Поиск по названию товара</p>
+        <div class="search_input">
+            <p class="search_input__hint">Введите марку</p>
+            <div class="search_button">
+                <p class="search_button__text">искать</p>
+            </div>
+        </div>
+    </div>
+    <div class="categories">
+        <div class="categories__atvs">
+            <p class="categories__atvs__text categories__text__style">Квадроциклы</p>
+            <img class="categories__atvs__img" src="/assets/img/Квадроциклы.png">
+            <div class="categories__atvs__detail">
+                <p class="categories__atvs__detail__text categories__detail__text__style">Подробнее</p>
+                <svg class="categories__atvs__detail__vector" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 6 9" fill="none">
+                    <path d="M0.228824 7.88793C-0.0650263 8.13366 -0.0762935 8.54196 0.203658 8.79989C0.48361 9.05782 0.948767 9.06771 1.24262 8.82198C1.24262 8.82198 5.77719 4.97116 5.78955 4.95998C6.07934 4.69388 6.06851 4.27195 5.76535 4.01758L1.24266 0.178763C0.949277 -0.067399 0.484101 -0.0581923 0.203658 0.199327C-0.0767846 0.456846 -0.0662956 0.865161 0.227086 1.11132L3.71295 4.12125C3.94389 4.32066 3.94393 4.67861 3.71304 4.87807L0.228824 7.88793Z" fill="#C4C4C4"/>
+                </svg>
+            </div>
+        </div>
+        <div class="categories__hydrocycle">
+            <p class="categories__hydrocycle__text categories__text__style">Гидроциклы</p>
+            <img class="categories__hydrocycle__img" src="/assets/img/Гидроциклы.png">
+            <div class="categories__hydrocycle__detail">
+                <p class="categories__hydrocycle__detail__text categories__detail__text__style">Подробнее</p>
+                <svg class="categories__hydrocycle__detail__vector" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 6 9" fill="none">
+                    <path d="M0.228824 7.88793C-0.0650263 8.13366 -0.0762935 8.54196 0.203658 8.79989C0.48361 9.05782 0.948767 9.06771 1.24262 8.82198C1.24262 8.82198 5.77719 4.97116 5.78955 4.95998C6.07934 4.69388 6.06851 4.27195 5.76535 4.01758L1.24266 0.178763C0.949277 -0.067399 0.484101 -0.0581923 0.203658 0.199327C-0.0767846 0.456846 -0.0662956 0.865161 0.227086 1.11132L3.71295 4.12125C3.94389 4.32066 3.94393 4.67861 3.71304 4.87807L0.228824 7.88793Z" fill="#C4C4C4"/>
+                </svg>
+            </div>
+        </div>
+        <div class="categories__motorboats">
+            <p class="categories__motorboats__text categories__text__style">Катера</p>
+            <img class="categories__motorboats__img" src="/assets/img/Катера.png">
+            <div class="categories__motorboats__detail">
+                <p class="categories__motorboats__detail__text categories__detail__text__style">Подробнее</p>
+                <svg class="categories__motorboats__detail__vector" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 6 9" fill="none">
+                    <path d="M0.228824 7.88793C-0.0650263 8.13366 -0.0762935 8.54196 0.203658 8.79989C0.48361 9.05782 0.948767 9.06771 1.24262 8.82198C1.24262 8.82198 5.77719 4.97116 5.78955 4.95998C6.07934 4.69388 6.06851 4.27195 5.76535 4.01758L1.24266 0.178763C0.949277 -0.067399 0.484101 -0.0581923 0.203658 0.199327C-0.0767846 0.456846 -0.0662956 0.865161 0.227086 1.11132L3.71295 4.12125C3.94389 4.32066 3.94393 4.67861 3.71304 4.87807L0.228824 7.88793Z" fill="#C4C4C4"/>
+                </svg>
+            </div>
+        </div> 
+        <div class="categories__snowmobiles">
+            <p class="categories__snowmobiles__text categories__text__style">Снегоходы</p>
+            <img class="categories__snowmobiles__img" src="/assets/img/Снегоходы.png">
+            <div class="categories__snowmobiles__detail">
+                <p class="categories__snowmobiles__detail__text categories__detail__text__style">Подробнее</p>
+                <svg class="categories__snowmobiles__detail__vector" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 6 9" fill="none">
+                    <path d="M0.228824 7.88793C-0.0650263 8.13366 -0.0762935 8.54196 0.203658 8.79989C0.48361 9.05782 0.948767 9.06771 1.24262 8.82198C1.24262 8.82198 5.77719 4.97116 5.78955 4.95998C6.07934 4.69388 6.06851 4.27195 5.76535 4.01758L1.24266 0.178763C0.949277 -0.067399 0.484101 -0.0581923 0.203658 0.199327C-0.0767846 0.456846 -0.0662956 0.865161 0.227086 1.11132L3.71295 4.12125C3.94389 4.32066 3.94393 4.67861 3.71304 4.87807L0.228824 7.88793Z" fill="#C4C4C4"/>
+                </svg>
+            </div>
+        </div>
+        <div class="categories__rover">
+            <p class="categories__rover__text categories__text__style">Вездеходы</p>
+            <img class="categories__rover__img" src="/assets/img/Вездеходы.png">
+            <div class="categories__rover__detail">
+                <p class="categories__rover__detail__text categories__detail__text__style">Подробнее</p>
+                <svg class="categories__rover__detail__vector" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 6 9" fill="none">
+                    <path d="M0.228824 7.88793C-0.0650263 8.13366 -0.0762935 8.54196 0.203658 8.79989C0.48361 9.05782 0.948767 9.06771 1.24262 8.82198C1.24262 8.82198 5.77719 4.97116 5.78955 4.95998C6.07934 4.69388 6.06851 4.27195 5.76535 4.01758L1.24266 0.178763C0.949277 -0.067399 0.484101 -0.0581923 0.203658 0.199327C-0.0767846 0.456846 -0.0662956 0.865161 0.227086 1.11132L3.71295 4.12125C3.94389 4.32066 3.94393 4.67861 3.71304 4.87807L0.228824 7.88793Z" fill="#C4C4C4"/>
+                </svg>
+            </div>
+        </div>
+        <div class="categories__engines">
+            <p class="categories__engines__text categories__text__style">Двигатели</p>
+            <img class="categories__engines__img" src="/assets/img/Двигатели.png">
+            <div class="categories__engines__detail">
+                <p class="categories__engines__detail__text categories__detail__text__style">Подробнее</p>
+                <svg class="categories__engines__detail__vector" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 6 9" fill="none">
+                    <path d="M0.228824 7.88793C-0.0650263 8.13366 -0.0762935 8.54196 0.203658 8.79989C0.48361 9.05782 0.948767 9.06771 1.24262 8.82198C1.24262 8.82198 5.77719 4.97116 5.78955 4.95998C6.07934 4.69388 6.06851 4.27195 5.76535 4.01758L1.24266 0.178763C0.949277 -0.067399 0.484101 -0.0581923 0.203658 0.199327C-0.0767846 0.456846 -0.0662956 0.865161 0.227086 1.11132L3.71295 4.12125C3.94389 4.32066 3.94393 4.67861 3.71304 4.87807L0.228824 7.88793Z" fill="#C4C4C4"/>
+                </svg>
+            </div>
+        </div>               
+    </div>
+    <div class="popular_product">
+        <div class="popular_product__header">
+            <p class="popular_product__header__text">Популярные товары</p>
+            <p class="popular_product__header__spare">Запчасти</p>
+            <p class="popular_product__motors">Моторы</p>
+            <p class="popular_product__tires">шины</p>
+            <p class="popular_product__electronics">Электроника</p>
+            <p class="popular_product__tools">Инструменты</p>
+            <p class="popular_product__accessories">Аксессуары</p>
+        </div>
     </div>
     <script src="/assets/js/js.js"></script>
 </body>
